# doi2bibtex

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pypi.yaml  tests.yaml
doi2bibtex/: __init__.py  ads.py  bibtex.py  cli.py  config.py  constants.py  dblp.py  identify.py  isbn.py  process.py  resolve.py  utils.py
tests/: test_ads.py  test_bibtex.py  test_cli.py  test_config.py  test_dblp.py  test_identify.py  test_isbn.py  test_process.py  test_resolve.py  test_utils.py
