[project]
name = "doi2bibtex"
dynamic = [
    "description",
    "readme",
    "authors",
    "classifiers",
    "version",
    "optional-dependencies",
    "dependencies",
    "scripts",
]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]